# coordinator

./: .typos.toml  DEVELOPMENT.md  Dockerfile.builder  Dockerfile.coordinator  Makefile  README.md  go.mod  go.sum  versions.mk
.github/workflows/: check-typos.yaml  ci-pr-checks.yaml
cmd/coordinator/: main.go
configs/: coordinator.yaml
docs/: architecture.md  communication.md
pkg/batch/: aggregate.go  aggregate_test.go  batch.go  batch_test.go  mux.go  mux_test.go  rewrite.go  rewrite_test.go  source.go  source_test.go
pkg/config/: config.go
pkg/gateway/: client.go  client_test.go  paths.go  paths_test.go
pkg/pipeline/: context.go  integration_test.go  pipeline.go  pipeline_test.go  text_only_test.go
pkg/server/: handlers.go  handlers_test.go  server.go
pkg/steps/: conditional_decode.go  conditional_decode_test.go  connector_wiring_test.go  decode.go  decode_test.go  encode.go  encode_prefill_flow_test.go  encode_test.go  gateway_paths_test.go  params.go  params_test.go  prefill.go  prefill_decode_flow_test.go  prefill_test.go  render.go  render_encode_flow_test.go  render_test.go  replace_media_urls.go  replace_media_urls_test.go  request_id_log_test.go  utils.go
praxis-prefill-proxy/: Cargo.toml  README.md  praxis.yaml  test_server.py
praxis-prefill-proxy/src/: main.rs
praxis-prefill-proxy/src/filters/: mod.rs  noop_log.rs  prefill_decode.rs
praxis-prefill-proxy/tests/: integration.rs
scripts/: compare-coverage.sh  pull_images.sh
test/real-vllm-e2e/: encode_test.go  prefill_test.go
test/scripts/: run_e2e_coordinator.sh
(+32 files in other folders)
